# shoporusni_prompt

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/lib/: api.rs  cache.rs  config.rs  mod.rs
